syntax = "proto3";

package drop;

option go_package = "proto";

service DropApi {
    rpc TwoStepLogin(LoginRequest) returns (stream LoginResponse) {}
    rpc PutLink(PutLinkRequest) returns (PutLinkResponse) {}
    rpc RemoveLink(RemoveLinkRequest) returns (RemoveLinkResponse) {}
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
}

message Record {
    string linkText = 1;
    string linkAddress = 2;
    int64 id = 3;
}

message LoginRequest {
}

message LoginResponse {
}

message PutLinkRequest {
    Record link = 1;
}

message PutLinkResponse {
    Record link =1;
}

message RemoveLinkRequest {
    Record link = 1;
}

message RemoveLinkResponse {
    Record link = 1;
}

message SubscribeRequest {
    bool excludePast = 1;
    Record link = 2;
}

message SubscribeResponse {
    enum Action {
        CREATE = 0;
        REMOVE = 1;
    }
    Action action = 1;
    Record record = 2;
}

